init enviroment sassTocss

--- a/index.html
+++ b/index.html
@@ -5,8 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clean-Me-website</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="page-container">
+      <section id="header">
+        <div class="wrapper">
+          <div class="navbar">
+            <div class="logo">
+              CleanMe
+            </div>
+            <div class="links-wrap">
+              <div class="contact-header">
+                <div class="phone">
+                  <i class="fas fa-phone-alt"></i>
+                  +1234567890
+                </div>
+                <div class="email">
+                  <i class="fas fa-envelope"></i>
+                  info@example.com
+                </div>
+                <div class="icons">
+                  <i class="fab fa-twitter"></i>
+                  <i class="fab fa-facebook-square"></i>
+                  <i class="fab fa-youtube"></i>
+                  <i class="fab fa-instagram-square"></i>
+                  <i class="fab fa-linkedin"></i>
+                </div>
+              </div>
+              <nav>
+                <ul>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Service</a></li>
+                  <li><a href="#">Project</a></li>
+                  <li><a href="#">Single</a></li>
+                  <li><a href="#">Contact</a></li>
+                  <li><a href="#">Dropdown</a></li>
+                  <li><a href="#" class="btn">Get a qoute</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
 </body>
 </html>
