--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="page-container">
+    <!-- header -->
       <section id="header">
         <div class="wrapper">
           <div class="navbar">
@@ -16,16 +17,16 @@
               CleanMe
             </div>
             <div class="links-wrap">
-              <div class="contact-header">
-                <div class="phone">
+              <div class="contact-header flex">
+                <div class="phone flex">
                   <i class="fas fa-phone-alt"></i>
-                  +1234567890
+                  <p>+1234567890</p>
                 </div>
-                <div class="email">
+                <div class="email flex">
                   <i class="fas fa-envelope"></i>
-                  info@example.com
+                  <p>info@example.com</p>
                 </div>
-                <div class="icons">
+                <div class="icons flex">
                   <i class="fab fa-twitter"></i>
                   <i class="fab fa-facebook-square"></i>
                   <i class="fab fa-youtube"></i>
@@ -34,7 +35,7 @@
                 </div>
               </div>
               <nav>
-                <ul>
+                <ul class="flex">
                   <li><a href="#">Home</a></li>
                   <li><a href="#">About</a></li>
                   <li><a href="#">Service</a></li>
